--- a/static/css/config.css
+++ b/static/css/config.css
@@ -1,4 +1,32 @@
 :root{
-    --main-green: #33FF33;
+    --main-green:  #32CD32;
     --main-white: #f5f5f5;
+    --main-grey: #0e0e0e;
+}
+
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
+}
+.navbar-toggler-icon {
+background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(51, 255, 51, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+.navbar-toggler {
+border-color: rgb(51, 255, 51);
+} 
+.text-green{
+    color: var(--main-green);
+}
+.bg-green{
+    background-color: var(--main-green);
+}
+.navbar-brand{
+    font-weight: bold;
+    font-size: 35px;
+}
+.nav-link{
+    font-size: 18px;
+    color: var(--main-grey);
 }
