--- a/static/css/config.css
+++ b/static/css/config.css
@@ -1,7 +1,7 @@
 :root{
     --main-green:  #32CD32;
     --main-white: #f5f5f5;
-    --main-grey: #0e0e0e;
+    --main-grey: rgb(14, 14, 14);
 }
 
 .navbar-toggler:focus,
@@ -22,11 +22,15 @@ border-color: rgb(51, 255, 51);
 .bg-green{
     background-color: var(--main-green);
 }
+.navbar{
+    z-index: 1000;
+    background-color: #f5f5f5;
+}
 .navbar-brand{
     font-weight: bold;
     font-size: 35px;
 }
 .nav-link{
     font-size: 18px;
-    color: var(--main-grey);
+    /* color: var(--main-grey); */
 }
