--- a/static/css/doctor.css
+++ b/static/css/doctor.css
@@ -1,27 +1,61 @@
-input {
-    display: inline-block;
-    padding: 10px 10px 10px 10px;
+:root {
+  --main-green: #32cd32;
+  --main-white: #f5f5f5;
+  --main-grey: #0e0e0e;
+}
+.doctor-forms {
+  margin-top: 5em;
+ 
+}
+.doctor-forms form {
+  display: block;
+  position: relative;
 }
 
-input:focus {
-        border: thin solid #32cd32;
-        border-bottom: solid medium #32cd32;
-        background-color:#fff;
-    }
+.text-field {
+  position: relative;
+  margin: 10px 2.5px 20px 2.5px;
+}
+.right {
+  position: absolute;
+  right: 5em;
+  top: -0.5em;
+}
+#form-text {
+  height: 11.2em;
+}
+input,
+textarea {
+  display: inline-block;
+  background-color: #fafafa;
+  padding: 10px 10px 10px 10px;
+  border: 1px solid var(--main-green);
+  border-radius: 5px;
+  width: 17em;
+}
+
+input:focus,
+textarea:focus {
+  background-color: #fff;
+}
 
 label {
-    position: absolute;
-    pointer-events: none;
-    left: 10px;
-    top: 10px;
-    transition: 0.2s;
+  color: #999;
+  position: absolute;
+  pointer-events: none;
+  left: 10px;
+  top: 10px;
+  transition: 0.2s;
 }
 
-input:focus ~ label, input:valid ~ label {
-    top: -10px;
-    left: 15px;
-    font-size: small;
-    color: #32cd32;
-    background-color:#fff;
-    padding:0 5px 0 5px;
+input:focus ~ label,
+input:valid ~ label,
+textarea:focus ~ label,
+textarea:valid ~ label {
+  top: -10px;
+  left: 15px;
+  font-size: small;
+  color: #32cd32;
+  background-color: #fff;
+  padding: 0 5px 0 5px;
 }
