--- a/views/doctors.html
+++ b/views/doctors.html
@@ -1,19 +1,41 @@
-<div class="doctor-form container-fluid" id="doctors-top">
-    <div class="doctor-form-img">
-        <img src="https://res.cloudinary.com/hephzisoft/image/upload/v1659390341/projectHygieia/Customer_Survey-rafiki_ytl7jl.svg" alt="" class="img-fluid">
-    </div>
-    <div class="doctor-form">
-        <form action="https://formspree.io/f/mzbwpgyy" method="POST">
-            <label for="firstname">Firstname</label>
-            <input type="text" name="firstname" id="" placeholder="Firstname">
-            <label for="lastname">Firstname</label>
-            <input type="text" name="lastname" id="" placeholder="Lastname">
-            <label for="number">Mobile Number</label>
-            <input type="tel" name="number" placeholder="Mobile Number">
+<div class="doctor-form row" id="doctors-top">
+  <div class="doctor-form-img col-lg-6">
+    <img
+      src="https://res.cloudinary.com/hephzisoft/image/upload/v1659390341/projectHygieia/Customer_Survey-rafiki_ytl7jl.svg"
+      alt=""
+      class="img-fluid"
+    />
+  </div>
+
+  <div class="doctor-forms col-lg-6">
+    <h1>Write a complaint and our team will refer you to a Doctor</h1>
+    <form action="https://formspree.io/f/mzbwpgyy" method="POST">
+      <div class="left">
+        <div class="text-field left">
+            <input type="text" name="name" id="" required />
+            <label for="name">Name</label>
+          </div>
+    
+          <div class="text-field left">
+            <input type="email" name="email" required />
             <label for="email">Email</label>
-            <input type="email" placeholder="Email">
-
-
-        </form>
-    </div>
+          </div>
+          <div class="text-field left">
+            <input type="text" name="complaint" required />
+            <label for="complaint">Complaint</label>
+          </div>
+      </div>
+      <div class="right">
+        <div class="text-field">
+            <input type="tel" name="number" required />
+            <label for="number">Mobile Number</label>
+          </div>
+          <div class="text-field" >
+            <textarea name="tellusmore" id="form-text" cols="30" rows="10" required ></textarea>
+            <label for="tellusmore">Tell us more</label>
+          </div>
+      </div>
+      <input type="submit" value="Submit" href="">
+    </form>
+  </div>
 </div>
