aded new section

--- a/views/main.html
+++ b/views/main.html
@@ -31,6 +31,10 @@
 </section>
 
 <!-- THIRD SCREEN -->
-<section class="p-5 container-fluid d-md-flex align-items-center justify-content-evenly" id="second-screen">
-    
+<section class="p-5 container-fluid d-md-flex align-items-center justify-content-evenly">
+    <div class="index-enquiry-txt">
+        <h2 class="text-center mb-3">Lorem ipsum <span class="text-green">dolor sit amet.</span></h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ipsum, aut fugiat doloremque commodi vero fugit adipisci. Et, voluptatem pariatur.</p>
+    </div>
+    <div class="index-enquiry-form"></div>
 </section>
