--- a/static/css/doctor.css
+++ b/static/css/doctor.css
@@ -3,23 +3,18 @@
   --main-white: #f5f5f5;
   --main-grey: #0e0e0e;
 }
-.doctor-forms {
+.doctor-form {
   margin-top: 5em;
- 
 }
-.doctor-forms form {
-  display: block;
+.doctor-form form {
   position: relative;
+  gap: 10px;
+
 }
 
 .text-field {
   position: relative;
   margin: 10px 2.5px 20px 2.5px;
-}
-.right {
-  position: absolute;
-  right: 5em;
-  top: -0.5em;
 }
 #form-text {
   height: 11.2em;
@@ -58,4 +53,23 @@ textarea:valid ~ label {
   color: #32cd32;
   background-color: #fff;
   padding: 0 5px 0 5px;
+}
+input[type="submit"] {
+  width: 200px;
+}
+
+.no-display{
+  display: block;
+}
+.no-sm-display{
+  display: none;
+}
+
+@media (max-width:500px) {
+  .no-display{
+    display: none;
+  }
+  .no-sm-display{
+    display: block;
+  }
 }
