added hover effect to the form button

--- a/static/css/doctor.css
+++ b/static/css/doctor.css
@@ -9,7 +9,6 @@
 .doctor-form form {
   position: relative;
   gap: 10px;
-
 }
 
 .text-field {
@@ -58,21 +57,26 @@ textarea:valid ~ label {
 input[type="submit"] {
   width: 100px;
   font-family: Poppins;
+  background-color: var(--main-green);
+  color: var(--main-white);
 }
-input
+input[type="submit"]:hover {
+  background-color: var(--main-white);
+  color: var(--main-green);
+}
 
-.no-display{
+.no-display {
   display: block;
 }
-.no-sm-display{
+.no-sm-display {
   display: none;
 }
 
-@media (max-width:500px) {
-  .no-display{
+@media (max-width: 500px) {
+  .no-display {
     display: none;
   }
-  .no-sm-display{
+  .no-sm-display {
     display: block;
   }
 }
