fixed alignment issue

--- a/views/main.html
+++ b/views/main.html
@@ -38,7 +38,7 @@
     </div>
 </section> -->
 
-<div class="doctor-forms p-4 d-md-flex align-items-center justify-content-evenly">
+<section class="doctor-forms p-5 d-md-flex align-items-center justify-content-evenly">
     <div class="index-enquiry-txt">
         <h2 class="mb-3">Lorem ipsum <span class="text-green">dolor sit amet.</span></h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ipsum, aut fugiat doloremque commodi vero fugit adipisci. Et, voluptatem pariatur.</p>
@@ -82,4 +82,4 @@
         <input type="submit" value="Submit" href="" class="no-sm-display"/>
       </form>
     </div>
-  </div>
+</section>
