fixed margin issue

--- a/views/main.html
+++ b/views/main.html
@@ -1,20 +1,23 @@
 <div id="main-top" class="mb-5"></div>
 
 <!-- FIRST SCREEN -->
-<section class="p-5 container-fluid d-md-flex align-items-center justify-content-evenly">
+<section class="px-5 pt-5 pb-3 container-fluid d-md-flex align-items-center justify-content-evenly">
+    <div class=" no-sm-display">
+        <img src="../static/images/home-landing.png" alt="" class="img-fluid">
+    </div>
     <div class="home-landing-txt">
         <h1 class="mb-2">Lorem ipsum dolor sit <span class="text-green">amet consectetur.</span></h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde veritatis eum alias voluptatum pariatur harum itaque molestias! Totam, animi deleniti.</p>
         <p class="mb-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde veritatis eum alias voluptatum pariatur harum itaque molestias! Totam, animi deleniti.</p>
         <a href="#" class="bg-green home-complaint-link text-decoration-none p-2"><span class="text-white">Make Complaint</span></a>
     </div>
-    <div class="home-landing-img">
+    <div class=" no-display">
         <img src="../static/images/home-landing.png" alt="" class="img-fluid">
     </div>
 </section>
 
 <!-- SECOND SCREEN -->
-<section class="p-5 container-fluid d-md-flex align-items-center justify-content-evenly" id="second-screen">
+<section class="px-5 py-3 container-fluid d-md-flex align-items-center justify-content-evenly" id="second-screen">
     <div class="index-img2">
         <img src="/static/images/home-landing02.png" alt="" class="img-fluid">
     </div>
@@ -31,21 +34,12 @@
 </section>
 
 <!-- THIRD SCREEN -->
-<!-- <section class="p-5 container-fluid d-md-flex align-items-center justify-content-evenly">
-    <div class="index-enquiry-txt">
-        <h2 class="text-center mb-3">Lorem ipsum <span class="text-green">dolor sit amet.</span></h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ipsum, aut fugiat doloremque commodi vero fugit adipisci. Et, voluptatem pariatur.</p>
-    </div>
-</section> -->
-
-<section class="doctor-forms p-5 d-md-flex align-items-center justify-content-evenly">
+<section class="doctor-forms px-5 py-3 d-md-flex align-items-center justify-content-evenly">
     <div class="index-enquiry-txt">
         <h2 class="mb-3">Lorem ipsum <span class="text-green">dolor sit amet.</span></h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ipsum, aut fugiat doloremque commodi vero fugit adipisci. Et, voluptatem pariatur.</p>
     </div>
-
-    <div class="doctor-form col-lg-6">
-      <h1>Write a complaint and our team will refer you to a Doctor</h1>
+    <div class="doctor-form">
       <form action="https://formspree.io/f/mzbwpgyy" method="POST" class="d-lg-flex d-md-flex d-sm-block">
         <div class="left">
           <div class="text-field left">
