--- a/static/css/config.css
+++ b/static/css/config.css
@@ -34,5 +34,5 @@ border-color: rgb(51, 255, 51);
 }
 .nav-link{
     font-size: 18px;
-    /* color: var(--main-grey); */
+    color: var(--main-green) !important;
 }
