--- a/views/doctors.html
+++ b/views/doctors.html
@@ -51,47 +51,136 @@
   </div>
 </div>
 
-<div class="doctor-profile">
+<div class="doctor-profile p-5">
   <div class="doctor-filter">
-    <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">All</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">General</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">Doctor 1</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">Doctor 2</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">Doctor 3</a>
-            </li>
-          </ul>
-        </div>
+    <div class="bar mx-auto text-center no-display bg-green">
+      <div class="items">
+        <button class="filter-btn">All</button>
       </div>
-    </nav>
-  </div>
-  <div class="doctor-doctors">
+      <div class="items">
+        <button class="filter-btn">General</button>
+      </div>
+      <div class="items">
+        <button class="filter-btn">Doctor1</button>
+      </div>
+      <div class="items">
+        <button class="filter-btn">Doctor2</button>
+      </div>
+      <div class="items">
+        <button class="filter-btn">Doctor3</button>
+      </div>
+    </div>
+    <div class="bar2 no-sm-display d-lg-none">
+      <div class="dropdown">
+        <span>All</span>
+        <span>General</span>
+        <a
+          class="btn btn-secondary dropdown-toggle"
+          href="#"
+          role="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          Others
+        </a>
 
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Doctor1</a></li>
+          <li><a class="dropdown-item" href="#">Doctor2</a></li>
+          <li><a class="dropdown-item" href="#">Doctor3</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="doctor-cards d-md-flex align-items-center justify-content-evenly">
+    <div class="card-container mb-5">
+      <img
+        src="https://randomuser.me/api/portraits/men/4.jpg"
+        alt="user"
+        class="rounded-circle"
+      />
+      <h4>Hephzisoft Ite</h4>
+      <h6>Spain</h6>
+      <p>General Doctor</p>
+      <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
+      <div class="buttons">
+        <button class="btn">Message</button>
+      </div>
+    </div>
+
+    <div class="card-container mb-5">
+      <img
+        src="https://randomuser.me/api/portraits/men/4.jpg"
+        alt="user"
+        class="rounded-circle"
+      />
+      <h4>Hephzisoft Ite</h4>
+      <h6>Spain</h6>
+      <p>General Doctor</p>
+      <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
+      <div class="buttons">
+        <button class="btn">Message</button>
+      </div>
+    </div>
+
+    <div class="card-container mb-5">
+      <img
+        src="https://randomuser.me/api/portraits/men/4.jpg"
+        alt="user"
+        class="rounded-circle"
+      />
+      <h4>Hephzisoft Ite</h4>
+      <h6>Spain</h6>
+      <p>General Doctor</p>
+      <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
+      <div class="buttons">
+        <button class="btn">Message</button>
+      </div>
+    </div>
+
+    <div class="card-container mb-5">
+      <img
+        src="https://randomuser.me/api/portraits/men/4.jpg"
+        alt="user"
+        class="rounded-circle"
+      />
+      <h4>Hephzisoft Ite</h4>
+      <h6>Spain</h6>
+      <p>General Doctor</p>
+      <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
+      <div class="buttons">
+        <button class="btn">Message</button>
+      </div>
+    </div>
+
+    <div class="card-container mb-5">
+      <img
+        src="https://randomuser.me/api/portraits/men/4.jpg"
+        alt="user"
+        class="rounded-circle"
+      />
+      <h4>Hephzisoft Ite</h4>
+      <h6>Spain</h6>
+      <p>General Doctor</p>
+      <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
+      <div class="buttons">
+        <button class="btn">Message</button>
+      </div>
+    </div>
+
+    <div class="card-container mb-5">
+      <img
+        src="https://randomuser.me/api/portraits/men/4.jpg"
+        alt="user"
+        class="rounded-circle"
+      />
+      <h4>Hephzisoft Ite</h4>
+      <h6>Spain</h6>
+      <p>General Doctor</p>
+      <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
+      <div class="buttons">
+        <button class="btn">Message</button>
+      </div>
+    </div>
   </div>
 </div>
