--- a/views/doctors.html
+++ b/views/doctors.html
@@ -1,187 +1,183 @@
 <div id="main-top" class="mb-5"></div>
-<div class="doctor-forms p-5 row">
-  <div class="doctor-form-img col-lg-6">
-    <img
-      src="https://res.cloudinary.com/hephzisoft/image/upload/v1659390341/projectHygieia/Customer_Survey-rafiki_ytl7jl.svg"
-      alt=""
-      class="img-fluid"
-    />
-  </div>
-
-  <div class="doctor-form col-lg-6">
-    <h1>Write a complaint and our team will refer you to a Doctor</h1>
-    <form
-      action="https://formspree.io/f/mzbwpgyy"
-      method="POST"
-      class="d-lg-flex d-md-flex d-sm-block"
-    >
-      <div class="left">
-        <div class="text-field left">
-          <input type="text" name="name" id="" required />
-          <label for="name">Name</label>
+<section class="p-5 container-fluid">
+    <div class="doctor-forms row">
+        <div class="doctor-form-img col-lg-6">
+          <img
+            src="https://res.cloudinary.com/hephzisoft/image/upload/v1659390341/projectHygieia/Customer_Survey-rafiki_ytl7jl.svg"
+            alt=""
+            class="img-fluid"
+          />
         </div>
-
-        <div class="text-field left">
-          <input type="email" name="email" required />
-          <label for="email">Email</label>
+      
+        <div class="doctor-form col-lg-6">
+          <h1>Write a complaint and our team will refer you to a Doctor</h1>
+          <form
+            action="https://formspree.io/f/mzbwpgyy"
+            method="POST"
+            class="d-lg-flex d-md-flex d-sm-block"
+          >
+            <div class="left">
+              <div class="text-field left">
+                <input type="text" name="name" id="" required />
+                <label for="name">Name</label>
+              </div>
+      
+              <div class="text-field left">
+                <input type="email" name="email" required />
+                <label for="email">Email</label>
+              </div>
+              <div class="text-field left">
+                <input type="text" name="complaint" required />
+                <label for="complaint">Complaint</label>
+              </div>
+              <input type="submit" value="Submit" href="" class="no-display" />
+            </div>
+            <div class="right">
+              <div class="text-field">
+                <input type="tel" name="number" required />
+                <label for="number">Mobile Number</label>
+              </div>
+              <div class="text-field">
+                <textarea
+                  name="tellusmore"
+                  id="form-text"
+                  cols="30"
+                  rows="10"
+                  required
+                ></textarea>
+                <label for="tellusmore">Tell us more</label>
+              </div>
+            </div>
+            <input type="submit" value="Submit" href="" class="no-sm-display" />
+          </form>
         </div>
-        <div class="text-field left">
-          <input type="text" name="complaint" required />
-          <label for="complaint">Complaint</label>
+      </div>
+</section>
+
+<section class="p-5 container-fluid">
+    <div class="doctor-profile">
+        <div class="doctor-filter">
+          <div class="bar mx-auto text-center no-display bg-green mb-5">
+            <div class="items">
+              <button class="filter-btn">All</button>
+            </div>
+            <div class="items">
+              <button class="filter-btn">General</button>
+            </div>
+            <div class="items">
+              <button class="filter-btn">Doctor1</button>
+            </div>
+            <div class="items">
+              <button class="filter-btn">Doctor2</button>
+            </div>
+            <div class="items">
+              <button class="filter-btn">Doctor3</button>
+            </div>
+          </div>
+          <div class="bar2 no-sm-display d-lg-none mx-auto">
+            <div class="dropdown">
+              <span class="mx-3">All</span>
+              <span class="mx-3">General</span>
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Others</a>
+      
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Doctor1</a></li>
+                <li><a class="dropdown-item" href="#">Doctor2</a></li>
+                <li><a class="dropdown-item" href="#">Doctor3</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <input type="submit" value="Submit" href="" class="no-display" />
-      </div>
-      <div class="right">
-        <div class="text-field">
-          <input type="tel" name="number" required />
-          <label for="number">Mobile Number</label>
+        <div class="doctor-cards d-md-flex align-items-center justify-content-evenly">
+          <div class="card-container mb-5">
+            <img
+              src="https://randomuser.me/api/portraits/men/4.jpg"
+              alt="user"
+              class="rounded-circle"
+            />
+            <h4>Hephzisoft Ite</h4>
+            <h6>Spain</h6>
+            <p>General Doctor</p>
+            <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
+            <div class="buttons">
+              <button class="btn">Message</button>
+            </div>
+          </div>
+      
+          <div class="card-container mb-5">
+            <img
+              src="https://randomuser.me/api/portraits/men/4.jpg"
+              alt="user"
+              class="rounded-circle"
+            />
+            <h4>Hephzisoft Ite</h4>
+            <h6>Spain</h6>
+            <p>General Doctor</p>
+            <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
+            <div class="buttons">
+              <button class="btn">Message</button>
+            </div>
+          </div>
+      
+          <div class="card-container mb-5">
+            <img
+              src="https://randomuser.me/api/portraits/men/4.jpg"
+              alt="user"
+              class="rounded-circle"
+            />
+            <h4>Hephzisoft Ite</h4>
+            <h6>Spain</h6>
+            <p>General Doctor</p>
+            <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
+            <div class="buttons">
+              <button class="btn">Message</button>
+            </div>
+          </div>
+      
+          <div class="card-container mb-5">
+            <img
+              src="https://randomuser.me/api/portraits/men/4.jpg"
+              alt="user"
+              class="rounded-circle"
+            />
+            <h4>Hephzisoft Ite</h4>
+            <h6>Spain</h6>
+            <p>General Doctor</p>
+            <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
+            <div class="buttons">
+              <button class="btn">Message</button>
+            </div>
+          </div>
+      
+          <div class="card-container mb-5">
+            <img
+              src="https://randomuser.me/api/portraits/men/4.jpg"
+              alt="user"
+              class="rounded-circle"
+            />
+            <h4>Hephzisoft Ite</h4>
+            <h6>Spain</h6>
+            <p>General Doctor</p>
+            <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
+            <div class="buttons">
+              <button class="btn">Message</button>
+            </div>
+          </div>
+      
+          <div class="card-container mb-5">
+            <img
+              src="https://randomuser.me/api/portraits/men/4.jpg"
+              alt="user"
+              class="rounded-circle"
+            />
+            <h4>Hephzisoft Ite</h4>
+            <h6>Spain</h6>
+            <p>General Doctor</p>
+            <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
+            <div class="buttons">
+              <button class="btn">Message</button>
+            </div>
+          </div>
         </div>
-        <div class="text-field">
-          <textarea
-            name="tellusmore"
-            id="form-text"
-            cols="30"
-            rows="10"
-            required
-          ></textarea>
-          <label for="tellusmore">Tell us more</label>
-        </div>
       </div>
-      <input type="submit" value="Submit" href="" class="no-sm-display" />
-    </form>
-  </div>
-</div>
-
-<div class="doctor-profile p-5">
-  <div class="doctor-filter">
-    <div class="bar mx-auto text-center no-display bg-green">
-      <div class="items">
-        <button class="filter-btn">All</button>
-      </div>
-      <div class="items">
-        <button class="filter-btn">General</button>
-      </div>
-      <div class="items">
-        <button class="filter-btn">Doctor1</button>
-      </div>
-      <div class="items">
-        <button class="filter-btn">Doctor2</button>
-      </div>
-      <div class="items">
-        <button class="filter-btn">Doctor3</button>
-      </div>
-    </div>
-    <div class="bar2 no-sm-display d-lg-none">
-      <div class="dropdown">
-        <span>All</span>
-        <span>General</span>
-        <a
-          class="btn btn-secondary dropdown-toggle"
-          href="#"
-          role="button"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
-          Others
-        </a>
-
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Doctor1</a></li>
-          <li><a class="dropdown-item" href="#">Doctor2</a></li>
-          <li><a class="dropdown-item" href="#">Doctor3</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="doctor-cards d-md-flex align-items-center justify-content-evenly">
-    <div class="card-container mb-5">
-      <img
-        src="https://randomuser.me/api/portraits/men/4.jpg"
-        alt="user"
-        class="rounded-circle"
-      />
-      <h4>Hephzisoft Ite</h4>
-      <h6>Spain</h6>
-      <p>General Doctor</p>
-      <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
-      <div class="buttons">
-        <button class="btn">Message</button>
-      </div>
-    </div>
-
-    <div class="card-container mb-5">
-      <img
-        src="https://randomuser.me/api/portraits/men/4.jpg"
-        alt="user"
-        class="rounded-circle"
-      />
-      <h4>Hephzisoft Ite</h4>
-      <h6>Spain</h6>
-      <p>General Doctor</p>
-      <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
-      <div class="buttons">
-        <button class="btn">Message</button>
-      </div>
-    </div>
-
-    <div class="card-container mb-5">
-      <img
-        src="https://randomuser.me/api/portraits/men/4.jpg"
-        alt="user"
-        class="rounded-circle"
-      />
-      <h4>Hephzisoft Ite</h4>
-      <h6>Spain</h6>
-      <p>General Doctor</p>
-      <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
-      <div class="buttons">
-        <button class="btn">Message</button>
-      </div>
-    </div>
-
-    <div class="card-container mb-5">
-      <img
-        src="https://randomuser.me/api/portraits/men/4.jpg"
-        alt="user"
-        class="rounded-circle"
-      />
-      <h4>Hephzisoft Ite</h4>
-      <h6>Spain</h6>
-      <p>General Doctor</p>
-      <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
-      <div class="buttons">
-        <button class="btn">Message</button>
-      </div>
-    </div>
-
-    <div class="card-container mb-5">
-      <img
-        src="https://randomuser.me/api/portraits/men/4.jpg"
-        alt="user"
-        class="rounded-circle"
-      />
-      <h4>Hephzisoft Ite</h4>
-      <h6>Spain</h6>
-      <p>General Doctor</p>
-      <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
-      <div class="buttons">
-        <button class="btn">Message</button>
-      </div>
-    </div>
-
-    <div class="card-container mb-5">
-      <img
-        src="https://randomuser.me/api/portraits/men/4.jpg"
-        alt="user"
-        class="rounded-circle"
-      />
-      <h4>Hephzisoft Ite</h4>
-      <h6>Spain</h6>
-      <p>General Doctor</p>
-      <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
-      <div class="buttons">
-        <button class="btn">Message</button>
-      </div>
-    </div>
-  </div>
-</div>
+</section>
