--- a/views/doctors.html
+++ b/views/doctors.html
@@ -93,8 +93,7 @@
             <img src="{{x.picture}}" alt="user" class="rounded-circle"/>
             <h4>{{x.name}}</h4>
             <h6>email: {{x.email}}</h6>
-            <p>General Doctor</p>
-            <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi alias animi a debitis odio vero earum dolorem delectus sed quibusdam.</p>
+            <p>{{x.role}}</p>
             <div class="buttons">
               <a class="btn" href="mailto:{{x.email}}">Message</a>
             </div>
