--- a/views/doctors.html
+++ b/views/doctors.html
@@ -90,7 +90,7 @@
         </div>
         <div class="doctor-cards d-md-flex align-items-center justify-content-evenly" >
           <div class="card-container mb-5" ng-repeat="x in info">
-            <img src="{{x.picture}}" alt="user" class="rounded-circle"/>
+            <img src="{{x.picture}}" alt="{{x.name}}" class="rounded-circle"/>
             <h4>{{x.name}}</h4>
             <h6>email: {{x.email}}</h6>
             <p>{{x.role}}</p>
