changed color and added images

--- a/views/main.html
+++ b/views/main.html
@@ -2,8 +2,8 @@
 
 <!-- FIRST SCREEN -->
 <section class="px-5 pt-5 pb-3 container-fluid d-md-flex align-items-center justify-content-evenly">
-    <div class=" no-sm-display">
-        <img src="https://res.cloudinary.com/hephzisoft/image/upload/v1659518799/projectHygieia/home-landing_jcqadp.png" alt="" class="img-fluid">
+    <div class="home-landing-img no-sm-display">
+        <img src="/static/images/index-landing.png" alt="" class="img-fluid">
     </div>
     <div class="home-landing-txt">
         <h1 class="mb-2">Lorem ipsum dolor sit <span class="text-green">amet consectetur.</span></h1>
@@ -12,14 +12,14 @@
         <a href="#third-screen" class="bg-green home-complaint-link text-decoration-none p-2"><span class="text-white">Make Complaint</span></a>
     </div>
     <div class=" no-display">
-        <img src="https://res.cloudinary.com/hephzisoft/image/upload/v1659518799/projectHygieia/home-landing_jcqadp.png" alt="" class="img-fluid">
+        <img src="/static/images/index-landing.png" alt="" class="img-fluid">
     </div>
 </section>
 
 <!-- SECOND SCREEN -->
 <section class="px-5 py-3 container-fluid d-md-flex align-items-center justify-content-evenly" id="second-screen">
     <div class="index-img2">
-        <img src="https://res.cloudinary.com/hephzisoft/image/upload/v1659518790/projectHygieia/home-landing02_n1rohq.png" alt="" class="img-fluid">
+        <img src="/static/images/index-landing02.png" alt="" class="img-fluid">
     </div>
     <div class="index-txt2">
         <h3 class="mb-2 text-green">Lorem Ipsumdolor</h3>
