--- a/static/css/config.css
+++ b/static/css/config.css
@@ -1,5 +1,5 @@
 :root{
-    --main-green:  #32CD32;
+    --main-green: #0dcaf0;
     --main-white: #f5f5f5;
     --main-grey: rgb(14, 14, 14);
 }
@@ -14,10 +14,10 @@ body{
     box-shadow: none;
 }
 .navbar-toggler-icon {
-background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(51, 255, 51, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(13, 202, 240, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 .navbar-toggler {
-border-color: rgb(51, 255, 51);
+border-color: rgb(13, 202, 240);
 } 
 .text-green{
     color: var(--main-green);
