--- a/views/doctors.html
+++ b/views/doctors.html
@@ -59,7 +59,7 @@
         <div class="doctor-filter">
           <div class="bar mx-auto text-center no-display bg-green mb-5">
             <div class="items">
-              <button class="filter-btn" ng-click="filters('role')">All</button>
+              <button class="filter-btn" ng-click="all('rel-name')">All</button>
             </div>
             <div class="items">
               <button class="filter-btn" ng-click="general('role')">General</button>
