removed href attribute on button tag

--- a/views/doctors.html
+++ b/views/doctors.html
@@ -81,9 +81,9 @@
               <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Others</a>
       
               <ul class="dropdown-menu">
-                <li><button class="dropdown-item" ng-click="pedri('role')" href="#">Pediatrician</button></li>
-                <li><button class="dropdown-item" ng-click="optha('role')" href="#">Opthalmologist</button></li>
-                <li><button class="dropdown-item" ng-click="thera('role')" href="#">Theraphist</button></li>
+                <li><button class="dropdown-item" ng-click="pedri('role')">Pediatrician</button></li>
+                <li><button class="dropdown-item" ng-click="optha('role')">Opthalmologist</button></li>
+                <li><button class="dropdown-item" ng-click="thera('role')">Theraphist</button></li>
               </ul>
             </div>
           </div>
