fixed header and made few style changes

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,3 +21,8 @@ section{
 .home-landing-img, .home-landing-txt{
     width: 100%;
 }
+@media (max-width:992px) {
+    .flex-div{
+        display: block !important;
+    }
+}
