--- a/views/main.html
+++ b/views/main.html
@@ -34,7 +34,7 @@
 </section>
 
 <!-- THIRD SCREEN -->
-<section id="third-screen" class="doctor-forms px-5 py-3 d-md-flex align-items-center justify-content-evenly">
+<section id="third-screen" class="doctor-forms px-5 py-3 d-md-flex align-items-center justify-content-evenly flex-div">
     <div class="index-enquiry-txt">
         <h2 class="mb-3">Lorem ipsum <span class="text-green">dolor sit amet.</span></h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ipsum, aut fugiat doloremque commodi vero fugit adipisci. Et, voluptatem pariatur.</p>
