--- a/static/css/config.css
+++ b/static/css/config.css
@@ -77,6 +77,7 @@ body{
     text-decoration:none;
     font-size:22px;
     display:block;
+    font-family: Poppins;
     transition:0.3s;
     color: var(--main-green);
   }
