bro am done with the footer
i am coming to school soon i noticed some things we need to change on small screen

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,3 +1,8 @@
 footer{
     background-color: var(--main-white);
+    font-family: Poppins;
+}
+footer h2{
+    font-weight: bolder;
+    color: var(--main-green);
 }
